@@ -1,5 +1,9 @@
 2006-07-12  Marcus Brinkmann  <marcus@g10code.de>
 
+	* ath.c (ath_mutex_destroy): Microoptimize destruction of unused
+	statitically initialized mutexes.  Suggested by Victor Stinner
+	<haypo@inl.fr>.
+
 	* gcrypt.h (GCRY_THREAD_OPTION_PTHREAD_IMPL,
 	(GCRY_THREAD_OPTION_PTH_IMPL): Add missing initializers to
 	suppress gcc warning.
